unpackaged/main/default/objects/Supplies_Order__c/Supplies_Order__c.object-meta.xml
<CustomObject>
    <label>Supplies Order</label>
    <nameField>
        <label>Supplies Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplies Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>