unpackaged/main/default/objects/Supplies_Order__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplies Orders</relationshipLabel>
    <relationshipName>Supplies_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>