unpackaged/main/default/objects/Supplies_Order__c/fields/AssociatedOppsOwner__c.field-meta.xml
<CustomField>
    <fullName>AssociatedOppsOwner__c</fullName>
    <description>Opportunity Owner on the Supply Order. Reporting Field.</description>
    <formula>OpportunityId__r.Opportunity_Owner__c</formula>
    <inlineHelpText>Opportunity Owner on the Supply Order.</inlineHelpText>
    <label>Associated Opp's Owner</label>
    <type>Text</type>
</CustomField>