unpackaged/main/default/objects/Supplies_Order__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplies Orders</relationshipLabel>
    <relationshipName>Supplies_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>