unpackaged/main/default/objects/Supplies_Order__c/fields/eCommerce_Flag__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eCommerce Flag</label>
    <type>Checkbox</type>
</CustomField>