unpackaged/main/default/objects/Supplies_Order__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplies Orders</relationshipLabel>
    <relationshipName>Supplies_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>