unpackaged/main/default/objects/Supplies_Order__c/fields/Order_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Email__c</fullName>
    <label>Order Email</label>
    <type>Email</type>
</CustomField>