unpackaged/main/default/objects/Supplies_Order__c/fields/Order_P21_Last_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_P21_Last_Updated_Time__c</fullName>
    <label>Order P21 Last Updated Time</label>
    <type>DateTime</type>
</CustomField>