unpackaged/main/default/objects/Supplies_Order__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>