unpackaged/main/default/objects/Supplies_Order__c/fields/P21_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>P21_Contact_Phone__c</fullName>
    <label>P21 Contact Phone</label>
    <type>Phone</type>
</CustomField>