unpackaged/main/default/objects/Supplies_Order__c/fields/P21_OE_Status__c.field-meta.xml
<CustomField>
    <fullName>P21_OE_Status__c</fullName>
    <label>P21 OE Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>