unpackaged/main/default/objects/Supplies_Order__c/fields/P21_Order_OE_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>P21_Order_OE_ERP_ID__c</fullName>
    <description>The unique Order Entry field.</description>
    <externalId>true</externalId>
    <label>P21 Order OE ERP ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>