unpackaged/main/default/objects/Supplies_Order__c/fields/P21_Physical_State__c.field-meta.xml
<CustomField>
    <fullName>P21_Physical_State__c</fullName>
    <label>P21 Physical State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>