unpackaged/main/default/objects/Supplies_Order__c/fields/P21_Physical_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>P21_Physical_Zip_Code__c</fullName>
    <label>P21 Physical Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>