unpackaged/main/default/objects/Supplies_Order__c/fields/P21_Quote_OE_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>P21_Quote_OE_ERP_ID__c</fullName>
    <label>P21 Quote OE ERP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>