unpackaged/main/default/objects/Supplies_Order__c/fields/RPT_DaysinbetweenOrderDateandToday__c.field-meta.xml
<CustomField>
    <fullName>RPT_DaysinbetweenOrderDateandToday__c</fullName>
    <description>Report Field</description>
    <formula>TODAY() -  Order_Date__c</formula>
    <inlineHelpText>Report Field Calculate Days between Order Date compare with Today's Date</inlineHelpText>
    <label>Days in between Order Date and Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>