unpackaged/main/default/objects/Supplies_Order__c/fields/Total_Amt_Material__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Material__c</fullName>
    <label>Total Amt Material</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>