unpackaged/main/default/objects/Supplies_Order__c/fields/Total_Amt_Other__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Other__c</fullName>
    <description>Broad Other Category for Opportunity</description>
    <label>Total Amt Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>