unpackaged/main/default/objects/Supplies_Order__c/fields/Total_Amt_Tooling__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Tooling__c</fullName>
    <label>Total Amt Tooling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>