unpackaged/main/default/objects/Supplies_Order__c/fields/Xometry_ERP_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ERP_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>