unpackaged/main/default/objects/Supplies_Order__c/listViews/eComm_Orders.listView-meta.xml
<ListView>
    <fullName>eComm_Orders</fullName>
    <columns>NAME</columns>
    <columns>P21_Order_OE_ERP_ID__c</columns>
    <columns>P21_Quote_OE_ERP_ID__c</columns>
    <columns>XometryJobID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Email__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>Order_Total__c</columns>
    <columns>P21_Account_DetailsID__c</columns>
    <columns>Order_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>P21_Contact_Phone__c</columns>
    <columns>PartnerID__c</columns>
    <columns>eCommerce_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eCommerce_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>eComm Orders</label>
    <sharedTo>
        <roleAndSubordinatesInternal>SellerMarketplace</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>